--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         color: #fff;
         padding: 20px;
         box-sizing: border-box;
+        transform:rotateY(180deg);
       }
 
       .back {
         background-color: #e74c3c;
         color: #fff;
+        transform:rotateY(0deg);
       }
       input {
         width: calc(100% - 20px);
